--- a/environment.yml
+++ b/environment.yml
@@ -1,229 +1,10 @@
 name: gtsm3-era5-nrt-slm
 channels:
   - conda-forge
-  - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - alsa-lib=1.2.6.1=h7f98852_0
-  - attr=2.5.1=h166bdaf_1
-  - beautifulsoup4=4.11.1=pyha770c72_0
-  - bokeh=2.4.3=pyhd8ed1ab_3
-  - bottleneck=1.3.5=py310hde88566_0
-  - brotli=1.0.9=h166bdaf_7
-  - brotli-bin=1.0.9=h166bdaf_7
-  - brotlipy=0.7.0=py310h5764c6d_1004
-  - bzip2=1.0.8=h7f98852_4
-  - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2022.9.24=ha878542_0
-  - cairo=1.16.0=ha61ee94_1014
-  - cartopy=0.21.0=py310hcda3f9e_0
-  - cdo=2.0.5=hcb4c3c0_2
-  - cdsapi=0.5.1=pyhd8ed1ab_0
-  - certifi=2022.9.24=pyhd8ed1ab_0
-  - cffi=1.15.1=py310h255011f_0
-  - cftime=1.6.1=py310hde88566_0
-  - charset-normalizer=2.1.1=pyhd8ed1ab_0
-  - click=8.1.3=py310hff52083_0
-  - cloudpickle=2.1.0=pyhd8ed1ab_0
-  - colorama=0.4.5=pyhd8ed1ab_0
-  - cryptography=37.0.4=py310h597c629_0
-  - curl=7.83.1=h7bff187_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - cytoolz=0.12.0=py310h5764c6d_0
-  - dask=2022.8.1=pyhd8ed1ab_2
-  - dask-core=2022.8.1=pyhd8ed1ab_0
-  - dbus=1.13.6=h5008d03_3
-  - distributed=2022.8.1=pyhd8ed1ab_2
-  - docopt=0.6.2=py_1
-  - eccodes=2.27.0=h164a9dd_0
-  - esmf=8.2.0=nompi_h1ee4d8d_2
-  - expat=2.4.8=h27087fc_0
-  - fftw=3.3.10=nompi_ha7695d1_103
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
-  - fontconfig=2.14.0=h8e229c2_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - fonttools=4.36.0=py310h5764c6d_0
-  - freeglut=3.2.2=h9c3ff4c_1
-  - freetype=2.12.1=hca18f0e_0
-  - fribidi=1.0.10=h36c2ea0_0
-  - fsspec=2022.7.1=pyhd8ed1ab_0
-  - geos=3.11.0=h27087fc_0
-  - gettext=0.19.8.1=h73d1719_1008
-  - glib=2.72.1=h6239696_0
-  - glib-tools=2.72.1=h6239696_0
-  - graphite2=1.3.13=h58526e2_1001
-  - gsl=2.7=he838d99_0
-  - gst-plugins-base=1.20.3=hf6a322e_0
-  - gstreamer=1.20.3=hd4edc92_0
-  - harfbuzz=5.2.0=hf9f4e7c_0
-  - hdf4=4.2.15=h9772cbc_4
-  - hdf5=1.12.2=nompi_h2386368_100
-  - heapdict=1.0.1=py_0
-  - icu=70.1=h27087fc_0
-  - idna=3.3=pyhd8ed1ab_0
-  - jack=1.9.18=h8c3723f_1002
-  - jasper=2.0.33=ha77e612_0
-  - jinja2=3.1.2=pyhd8ed1ab_1
-  - jpeg=9e=h166bdaf_2
-  - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.4=py310hbf28c38_0
-  - krb5=1.19.3=h3790be6_0
-  - lcms2=2.12=hddcbb42_0
-  - ld_impl_linux-64=2.36.1=hea4e1c9_2
-  - lerc=4.0.0=h27087fc_0
-  - libaec=1.0.6=h9c3ff4c_0
-  - libblas=3.9.0=16_linux64_openblas
-  - libbrotlicommon=1.0.9=h166bdaf_7
-  - libbrotlidec=1.0.9=h166bdaf_7
-  - libbrotlienc=1.0.9=h166bdaf_7
-  - libcap=2.64=ha37c62d_0
-  - libcblas=3.9.0=16_linux64_openblas
-  - libclang=14.0.6=default_h2e3cab8_0
-  - libclang13=14.0.6=default_h3a83d3e_0
-  - libcups=2.3.3=h3e49a29_2
-  - libcurl=7.83.1=h7bff187_0
-  - libdb=6.2.32=h9c3ff4c_0
-  - libdeflate=1.13=h166bdaf_0
-  - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=h516909a_1
-  - libevent=2.1.10=h9b69904_4
-  - libffi=3.4.2=h7f98852_5
-  - libflac=1.3.4=h27087fc_0
-  - libgcc-ng=12.1.0=h8d9b700_16
-  - libgfortran-ng=12.1.0=h69a702a_16
-  - libgfortran5=12.1.0=hdcd56e2_16
-  - libglib=2.72.1=h2d90d5f_0
-  - libglu=9.0.0=he1b5a44_1001
-  - libgomp=12.1.0=h8d9b700_16
-  - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=16_linux64_openblas
-  - libllvm14=14.0.6=he0ac6c6_0
-  - libnetcdf=4.8.1=nompi_h21705cb_104
-  - libnghttp2=1.47.0=hdcd2b5c_1
-  - libnsl=2.0.0=h7f98852_0
-  - libogg=1.3.4=h7f98852_1
-  - libopenblas=0.3.21=pthreads_h78a6416_2
-  - libopus=1.3.1=h7f98852_1
-  - libpng=1.6.38=h753d276_0
-  - libpq=14.5=hd77ab85_0
-  - libsndfile=1.0.31=h9c3ff4c_1
-  - libsqlite=3.39.2=h753d276_1
-  - libssh2=1.10.0=haa6b8db_3
-  - libstdcxx-ng=12.1.0=ha89aaad_16
-  - libtiff=4.4.0=h0e0dad5_3
-  - libtool=2.4.6=h9c3ff4c_1008
-  - libudev1=249=h166bdaf_4
-  - libuuid=2.32.1=h7f98852_1000
-  - libvorbis=1.3.7=h9c3ff4c_0
-  - libwebp-base=1.2.4=h166bdaf_0
-  - libxcb=1.13=h7f98852_1004
-  - libxkbcommon=1.0.3=he3ba5ed_0
-  - libxml2=2.9.14=h22db469_4
-  - libzip=1.9.2=hc869a4a_1
-  - libzlib=1.2.12=h166bdaf_2
-  - locket=1.0.0=pyhd8ed1ab_0
-  - lz4=4.0.0=py310h5d5e884_2
-  - lz4-c=1.9.3=h9c3ff4c_1
-  - magics=4.12.1=hb2107fa_0
-  - magics-python=1.5.6=pyhd8ed1ab_0
-  - markupsafe=2.1.1=py310h5764c6d_1
-  - matplotlib=3.5.3=py310hff52083_1
-  - matplotlib-base=3.5.3=py310h5701ce4_1
-  - msgpack-python=1.0.4=py310hbf28c38_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - mysql-common=8.0.30=haf5c9bc_0
-  - mysql-libs=8.0.30=h28c427c_0
-  - nco=5.1.0=h81bb2a3_2
-  - ncurses=6.3=h27087fc_1
-  - netcdf4=1.6.0=nompi_py310h9fd08d4_101
-  - nspr=4.32=h9c3ff4c_1
-  - nss=3.78=h2350873_0
-  - numpy=1.23.2=py310h53a5b5f_0
-  - openjpeg=2.5.0=h7d73246_1
-  - openssl=1.1.1q=h166bdaf_0
-  - ossuuid=1.6.2=hf484d3e_1000
-  - packaging=21.3=pyhd8ed1ab_0
-  - pandas=1.4.3=py310h769672d_0
-  - pango=1.50.10=hc4f8a73_0
-  - partd=1.3.0=pyhd8ed1ab_0
-  - pcre=8.45=h9c3ff4c_0
-  - pillow=9.2.0=py310hbd86126_2
-  - pip=22.2.2=pyhd8ed1ab_0
-  - pixman=0.40.0=h36c2ea0_0
-  - ply=3.11=py_1
-  - portaudio=19.6.0=h57a0ea0_5
-  - proj=9.0.1=h93bde94_1
-  - psutil=5.9.1=py310h5764c6d_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - pulseaudio=14.0=h7f54b18_8
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pydap=3.3.0=pyhd8ed1ab_0
-  - pyopenssl=22.0.0=pyhd8ed1ab_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pyproj=3.4.0=py310hf94497c_0
-  - pyqt=5.15.7=py310h29803b5_0
-  - pyqt5-sip=12.11.0=py310hd8f1fbe_0
-  - pyshp=2.3.1=pyhd8ed1ab_0
-  - pysocks=1.7.1=py310hff52083_5
-  - python=3.10.6=h582c2e5_0_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.10=2_cp310
-  - pytz=2022.2.1=pyhd8ed1ab_0
-  - pyyaml=6.0=py310h5764c6d_4
-  - qt-main=5.15.4=ha5833f6_2
-  - readline=8.1.2=h0f457ee_0
-  - requests=2.28.1=pyhd8ed1ab_0
-  - scipy=1.9.0=py310hdfbd76f_0
-  - setuptools=65.2.0=py310hff52083_0
-  - shapely=1.8.4=py310h5e49deb_0
-  - simplejson=3.17.6=py310h5764c6d_1
-  - sip=6.6.2=py310hd8f1fbe_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sortedcontainers=2.4.0=pyhd8ed1ab_0
-  - soupsieve=2.3.2.post1=pyhd8ed1ab_0
-  - sqlite=3.39.2=h4ff8645_1
-  - tblib=1.7.0=pyhd8ed1ab_0
-  - tempest-remap=2.1.4=h75968e7_0
-  - tk=8.6.12=h27826a3_0
-  - toml=0.10.2=pyhd8ed1ab_0
-  - toolz=0.12.0=pyhd8ed1ab_0
-  - tornado=6.1=py310h5764c6d_3
-  - tqdm=4.64.0=pyhd8ed1ab_0
-  - typing_extensions=4.3.0=pyha770c72_0
-  - tzdata=2022c=h191b570_0
-  - udunits2=2.2.28=hc3e0081_0
-  - unicodedata2=14.0.0=py310h5764c6d_1
-  - urllib3=1.26.11=pyhd8ed1ab_0
-  - webob=1.8.7=pyhd8ed1ab_0
-  - wheel=0.37.1=pyhd8ed1ab_0
-  - xarray=2022.6.0=pyhd8ed1ab_1
-  - xcb-util=0.4.0=h166bdaf_0
-  - xcb-util-image=0.4.0=h166bdaf_0
-  - xcb-util-keysyms=0.4.0=h166bdaf_0
-  - xcb-util-renderutil=0.3.9=h166bdaf_0
-  - xcb-util-wm=0.4.1=h166bdaf_0
-  - xorg-fixesproto=5.0=h7f98852_1002
-  - xorg-inputproto=2.3.2=h7f98852_1002
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.0.10=h7f98852_0
-  - xorg-libsm=1.2.3=hd9c2040_1000
-  - xorg-libx11=1.7.2=h7f98852_0
-  - xorg-libxau=1.0.9=h7f98852_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h7f98852_1
-  - xorg-libxfixes=5.0.3=h7f98852_1004
-  - xorg-libxi=1.7.10=h7f98852_0
-  - xorg-libxrender=0.9.10=h7f98852_1003
-  - xorg-renderproto=0.11.1=h7f98852_1002
-  - xorg-xextproto=7.3.0=h7f98852_1002
-  - xorg-xproto=7.0.31=h7f98852_1007
-  - xz=5.2.6=h166bdaf_0
-  - yaml=0.2.5=h7f98852_2
-  - zict=2.2.0=pyhd8ed1ab_0
-  - zlib=1.2.12=h166bdaf_2
-  - zstd=1.5.2=h6239696_4
+  - python=3.10.6
+  - xarray>=2022.6.0
+  - matplotlib>=3.5.3
+  - cdsapi>=0.5.1
+  - numpy>=1.23.2
+  - cartopy>=0.21.0
