--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,10 @@ channels:
 dependencies:
   - python=3.10.6
   - xarray>=2022.6.0
+  - netCDF4>=1.6.0
+  - dask>=2022.8.1
+  - bottleneck>=1.3.5
+  - scipy>=1.9.0
   - matplotlib>=3.5.3
   - cdsapi>=0.5.1
   - numpy>=1.23.2
